feat: add Lato font and font-face for it

--- a/fancy-weather/src/index.html
+++ b/fancy-weather/src/index.html
@@ -7,6 +7,22 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    
+
+    <div class="wrapper">
+
+        <header class="header">
+            <p>aaaa</p>
+        </header>
+
+        <main class="main">
+
+        </main>
+
+        <footer class="footer">
+
+        </footer>
+
+    </div>
+
 </body>
 </html>
