feat: add function to get a current position

--- a/fancy-weather/src/index.html
+++ b/fancy-weather/src/index.html
@@ -101,6 +101,8 @@
         </main>
 
         <footer class="footer">
+            <a href="https://rs.school/" class="footer__rss">RSSchool</a>
+            <a href="https://github.com/HolubIvan" class="footer__git">Holub Ivan</a>
         </footer>
 
     </div>
