feat: add language change function

--- a/fancy-weather/src/index.html
+++ b/fancy-weather/src/index.html
@@ -31,8 +31,8 @@
             </div>
             
             <div class="temperature">
-                <button type="submit" class="temperature__farengate active-temperature">&#8457;</button>
-                <button type="submit" class="temperature__celsius">&#8451;</button>
+                <button type="submit" class="temperature__farengate active-temperature" data="farengate">&#8457;</button>
+                <button type="submit" class="temperature__celsius" data="celsius">&#8451;</button>
             </div>
 
             <form action="index.html" method="get" class="city-search">
