feat: add map to html and js

--- a/fancy-weather/src/index.html
+++ b/fancy-weather/src/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>Fancy Weather</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="https://api.mapbox.com/mapbox-gl-js/v1.10.0/mapbox-gl.js"></script>
+    <link href="https://api.mapbox.com/mapbox-gl-js/v1.10.0/mapbox-gl.css" rel="stylesheet" />
 </head>
 <body>
 
@@ -43,8 +45,7 @@
         </header>
 
         <main class="main">
-
-            <div class="weather">
+            <!-- <div class="weather">
                 
                 <div class="weather__current current">
                     <div class="current__info">
@@ -96,7 +97,7 @@
                         Longitude: 55°05'
                     </p>
                 </div>
-            </div>
+            </div> -->
 
         </main>
 
