--- a/fancy-weather/src/index.html
+++ b/fancy-weather/src/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <div class="wrapper">
-
+        
         <header class="header">
 
             <button class="arrows-block">
@@ -33,8 +33,8 @@
             </div>
             
             <div class="temperature">
-                <button type="submit" class="temperature__farengate active-temperature" data="farengate">&#8457;</button>
-                <button type="submit" class="temperature__celsius" data="celsius">&#8451;</button>
+                <button type="submit" class="temperature__fahrenheit" data="fahrenheit" >&#8457;</button>
+                <button type="submit" class="temperature__celsius active-temperature" data="celsius" disabled>&#8451;</button>
             </div>
 
             <form action="index.html" method="get" class="city-search">
