--- a/fancy-weather/src/index.html
+++ b/fancy-weather/src/index.html
@@ -32,13 +32,14 @@
                 </div>
             </div>
             
-            <div class="temperature">
+            <div class="temperature" active="metric">
                 <button type="submit" class="temperature__fahrenheit" data="fahrenheit" >&#8457;</button>
                 <button type="submit" class="temperature__celsius active-temperature" data="celsius" disabled>&#8451;</button>
             </div>
 
             <form action="index.html" method="get" class="city-search">
                 <input type="text" class="city-search__input" placeholder="Search city or ZIP">
+                <img class="city-search__microphone" src="./img/microphone.png" alt="microphone">
                 <button type="submit" class="city-search__button">Search</button>
             </form>
 
