feat: add active style to microphone when pushed

--- a/fancy-weather/src/index.html
+++ b/fancy-weather/src/index.html
@@ -41,7 +41,9 @@
                 <input type="text" class="city-search__input" placeholder="Search city or ZIP">
                 <img class="city-search__microphone" src="./img/microphone.png" alt="microphone">
                 <button type="submit" class="city-search__button">Search</button>
+                <p class="error"></p>
             </form>
+
 
         </header>
 
