feat: add audio speech forecast function

--- a/fancy-weather/src/index.html
+++ b/fancy-weather/src/index.html
@@ -37,6 +37,8 @@
                 <button type="submit" class="temperature__celsius active-temperature" data="celsius" disabled>&#8451;</button>
             </div>
 
+            <div class="audio-information">Listen</div>
+
             <form action="index.html" method="get" class="city-search">
                 <input type="text" class="city-search__input" placeholder="Search city or ZIP">
                 <img class="city-search__microphone" src="./img/microphone.png" alt="microphone">
